--- a/crewai-stocks.ipynb
+++ b/crewai-stocks.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Instalação\n",
+    "#Instalação pelo Terminal\n",
     "pip install yfinance --user\n",
     "# Install the main crewAI package\n",
     "pip install crewai --user\n",
@@ -15,18 +15,23 @@
     "\n",
     "# Install the main crewAI package and the tools package\n",
     "# that includes a series of helpful tools for your agents\n",
-    "pip install 'crewai[tools]' --user"
+    "pip install 'crewai[tools]' --user\n",
+    "\n",
+    "pip install langchain --user\n",
+    "pip install langchain-openai --user\n",
+    "pip install langchain-community --user\n",
+    "pip install -U duckduckgo-search --user"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import os\n",
-    "\n",
+    "# Importação para não dar erro com o numpy\n",
     "import numpy as np\n",
     "np.float_ = np.float64\n",
     "\n",
@@ -34,19 +39,22 @@
     "\n",
     "import yfinance as yf\n",
     "\n",
-    "from crewai import Agent, Task\n",
+    "from crewai import Agent, Task, Crew, Process\n",
     "\n",
-    "from langchain.tools import Tool"
+    "from langchain.tools import Tool\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_community.tools import DuckDuckGoSearchResults"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#CRIANDO YAHOO FINANCE TOOL\n",
     "def fetch_stock_price(ticket):\n",
-    "    stock = yf.download(\"AAPL\", start=\"2023-08-08\", end=\"2024-08-08\")\n",
+    "    stock = yf.download(\"AAPL\", start=\"2023-08-19\", end=\"2024-08-19\")\n",
     "    return stock\n",
     "\n",
     "yahoo_finance_tool = Tool(\n",
@@ -58,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -75,47 +83,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#IMPORTANTO OPENAI LLM - GPT\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-pro-dEzUsDoGDrmW5mT92vbny4HMjnuvMD-l0RFqkAxDzeuUH-uZFUj_9EMSfJAT3BlbkFJNrHqbjlDPV9kPmAnG_c9PxrKdIL02DG1u5yF3XkkL0VdqmSNO_VywtmvcA\"\n",
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stockPriceAnalyst = Agent(\n",
+    "    role=\"Senior stock price Analyst\",\n",
+    "    goal=\"Find the {ticket} stock price and analyses trends\",\n",
+    "    backstory=\"You're a highly experienced in analysing the price of a specific stock and make predictions about its future price.\",\n",
+    "    verbose=True,\n",
+    "    llm= llm,\n",
+    "    max_iter= 5,\n",
+    "    memory=True,\n",
+    "    allow_delegation=False,\n",
+    "    tools=[yahoo_finance_tool]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "getStockPrice = Task(\n",
+    "    description=\"Analyze the stock {ticket} price history and create a tren analyses of up, down or sideways\",\n",
+    "    expected_output=\"\"\"\"Specify the current trend stock price - up, down or sideways.\n",
+    "    eg. stock='APPL, price UP'\n",
+    "\"\"\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#IMPORTANDO A TOOL DE SEARCH\n",
+    "search_tool = DuckDuckGoSearchResults(backend='news', num_results=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newsAnalyst = Agent(\n",
+    "    role=\"Stock New Analyst\",\n",
+    "    goal=\"\"\"Create a short summary of the market news related to the stock {ticket} company. Specify the current trend - up, down or sideways with the news context.\n",
+    "    For each request stock asset, specify a number between 0 and 100, where 0 is extreme fear and 100 is extreme greed\"\"\",\n",
+    "    backstory=\"\"\"You're a highly experienced in analysing the market trends and news and have tracked assets for more than 10 years.\n",
+    "    \n",
+    "    You're also master level analysts in the tradicional markets and have deep understaning of human psychology.\n",
+    "\n",
+    "    You understand news, theirs titles and information, but you look at those with a health dose os skepticism.\n",
+    "    You consider also the source of the news articles.\n",
+    "    \"\"\",\n",
+    "    verbose=True,\n",
+    "    llm= llm,\n",
+    "    max_iter= 5,\n",
+    "    memory=True,\n",
+    "    allow_delegation=False,\n",
+    "    tools=[yahoo_finance_tool]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_news = Task(\n",
+    "    description=\"\"\"Take the stock and always include BTC to it (if not request).\n",
+    "    Use the search tool to search on individually.\n",
+    "\n",
+    "    The current date is {datetime.now()}.\n",
+    "\n",
+    "    Compose the results into a helpful report\n",
+    "    \"\"\",\n",
+    "    expected_output=\"\"\"\"A summary of the overall market and one sentence summary for each request asset.\n",
+    "    Include a fear/greed score for each asset based on the news. Use formar:\n",
+    "    <STOCK ASSET>\n",
+    "    <SUMMARY BASED ON NEWS>\n",
+    "    <TREND PREDICTION>\n",
+    "    <FEAR/GREED SCORE>\n",
+    "\"\"\",\n",
+    "    agent= newsAnalyst\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stockAnalystWrite = Agent(\n",
+    "    role=\"Senior Stock Analyst Writer\",\n",
+    "    goal=\"\"\"Aanlyze the trends price and news and write an insightfull compeling and informative 3 paragraph long newsletter based on the stock report and price trend.\"\"\",\n",
+    "    backstory=\"\"\"You're widely accepted as the best stock analust in the market. You understand complet concepts and create compelling stories and narratives that resonate with wider audiences.\n",
+    "    You understand macro factors and combine multiple theories - eg. cycle theory and fundamental analyses.\n",
+    "    You're able to hold multuple opinions when analyzing anything\"\"\",\n",
+    "    verbose=True,\n",
+    "    llm= llm,\n",
+    "    max_iter= 5,\n",
+    "    memory=True,\n",
+    "    allow_delegation=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writeAnalyses = Task(\n",
+    "    description=\"\"\"Use the stock price trend and the stock news report to create an analyses and write the newsletter about the {ticket} company\n",
+    "    that is brief and highlights the most important points.\n",
+    "    Focus on the stock price trend, news and fear;greed score. What are the near future considerations?\n",
+    "    Include the previous analyses of stock trend and news summary.\n",
+    "    \"\"\",\n",
+    "    expected_output=\"\"\"an eloquent 3 paragraphs newsletter formated as markdown in an easy readable manner. It should contain:\n",
+    "\n",
+    "    - 3 bullets executive summary\n",
+    "    - Introduction - set the overall picture and spike up the interest\n",
+    "    - main part provides the meat of the analysis including the news summary and fear/greed scores\n",
+    "    - summary - key facts and concrete future trend prediction - up, down and sideways.\n",
+    "    \n",
+    "    \"\"\",\n",
+    "    agent= stockAnalystWrite,\n",
+    "    context=[getStockPrice, get_news]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                  Open        High         Low       Close   Adj Close  \\\n",
-      "Date                                                                     \n",
-      "2023-08-08  179.690002  180.270004  177.580002  179.800003  178.643387   \n",
-      "2023-08-09  180.869995  180.929993  177.009995  178.190002  177.043762   \n",
-      "2023-08-10  179.479996  180.750000  177.600006  177.970001  176.825150   \n",
-      "2023-08-11  177.320007  178.619995  176.550003  177.789993  176.884857   \n",
-      "2023-08-14  177.970001  179.690002  177.309998  179.460007  178.546371   \n",
-      "...                ...         ...         ...         ...         ...   \n",
-      "2024-08-01  224.369995  224.479996  217.020004  218.360001  218.107544   \n",
-      "2024-08-02  219.149994  225.600006  217.710007  219.860001  219.605804   \n",
-      "2024-08-05  199.089996  213.500000  196.000000  209.270004  209.028061   \n",
-      "2024-08-06  205.300003  209.990005  201.070007  207.229996  206.990402   \n",
-      "2024-08-07  206.899994  213.639999  206.389999  209.820007  209.577423   \n",
-      "\n",
-      "               Volume  \n",
-      "Date                   \n",
-      "2023-08-08   67823000  \n",
-      "2023-08-09   60378500  \n",
-      "2023-08-10   54686900  \n",
-      "2023-08-11   51988100  \n",
-      "2023-08-14   43675600  \n",
-      "...               ...  \n",
-      "2024-08-01   62501000  \n",
-      "2024-08-02  105568600  \n",
-      "2024-08-05  119548600  \n",
-      "2024-08-06   69660500  \n",
-      "2024-08-07   63516400  \n",
-      "\n",
-      "[252 rows x 6 columns]\n"
+      "2024-08-20 17:39:34,320 - 12204 - __init__.py-__init__:531 - WARNING: Overriding of current TracerProvider is not allowed\n"
      ]
     }
    ],
    "source": [
-    "print(response)"
+    "crew = Crew(\n",
+    "    agents = [stockPriceAnalyst, newsAnalyst, stockAnalystWrite],\n",
+    "    tasks = [getStockPrice, get_news, writeAnalyses],\n",
+    "    verbose = True,\n",
+    "    process = Process.hierarchical,\n",
+    "    full_output = True,\n",
+    "    share_crew = False,\n",
+    "    manager_llm = llm,\n",
+    "    max_iter = 15\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results= crew.kickoff(inputs={'ticket': 'AAPL'})"
    ]
   }
  ],
