Final da 1ªa parte

--- a/crewai-stocks.ipynb
+++ b/crewai-stocks.ipynb
@@ -9,21 +9,21 @@
     "#Instala python pelo Terminal antes de rodar essa célula\n",
     "#python.exe -m pip install --upgrade pip\n",
     "\n",
+    "#\n",
+    "\n",
     "#Instalação pelo\n",
-    "!pip install yfinance\n",
+    "!pip install yfinance==0.2.41\n",
     "# Install the main crewAI package\n",
-    "!pip install crewai\n",
-    "\n",
-    "!pip install \"numpy<2\"\n",
-    "\n",
+    "!pip install crewai==0.28.8\n",
     "# Install the main crewAI package and the tools package\n",
     "# that includes a series of helpful tools for your agents\n",
     "!pip install 'crewai[tools]'\n",
-    "\n",
-    "!pip install langchain --user\n",
-    "!pip install langchain-openai\n",
-    "!pip install langchain-community\n",
-    "!pip install -U duckduckgo-search"
+    "!pip install \"numpy<2\"\n",
+    "!pip install langchain==0.1.20\n",
+    "!pip install langchain-openai==0.1.7\n",
+    "!pip install langchain-community==0.0.38\n",
+    "!pip install duckduckgo-search==5.3.0\n",
+    "#!pip install -U duckduckgo-search==5.3.0"
    ]
   },
   {
@@ -46,7 +46,9 @@
     "\n",
     "from langchain.tools import Tool\n",
     "from langchain_openai import ChatOpenAI\n",
-    "from langchain_community.tools import DuckDuckGoSearchResults"
+    "from langchain_community.tools import DuckDuckGoSearchResults\n",
+    "\n",
+    "from IPython.display import Markdown"
    ]
   },
   {
@@ -251,6 +253,42 @@
    "outputs": [],
    "source": [
     "results= crew.kickoff(inputs={'ticket': 'AAPL'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(results.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results['final_output']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(results['tasks_output'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(results['final_output'])"
    ]
   }
  ],
